# QEMU_Test

./: CMakeLists.txt  LICENSE  README.md  build.sh  clean_cmake.py  connect_qemu.sh  make_cmake.py  musca-a.lds  run_qemu.sh  run_test.sh  test.lds  test_build.sh  test_validate.py  toolchain.cmake
armv8m/: CMakeLists.txt  cmsis_compiler.h  core_cm33.h  system_ARMCM33.h
include/: CMakeLists.txt  common.c  common.h  memory.h  peripheral.h
libc/: CMakeLists.txt  stdio.c  stdio.h
main/: CMakeLists.txt  interrupt_table.c  interrupt_table.h  musca-a.S  musca-a.c  vector_table.c  vector_table.h
mpu/: mpu.c  mpu.h
test/: CMakeLists.txt  test.S  vector_table.S  vector_table.c  vector_table.h
test/main_test/: test.c
test/mpu_region_check/: test.c
test/test_dir/: CMakeLists.txt  mpu_region_check.c  test.c
uart/: CMakeLists.txt  uart.c  uart.h
vector_table/: CMakeLists.txt  vector_table.c  vector_table.h
